@@ -1,27 +1,27 @@
 <?xml version = '1.0' encoding = 'UTF-8'?>
 <!DOCTYPE KDevPrjSession>
 <KDevPrjSession>
- <DocsAndViews NumberOfDocuments="12" >
+ <DocsAndViews NumberOfDocuments="13" >
   <Doc0 NumberOfViews="1" URL="file:///home/jathey/dev/comical/Makefile" >
    <View0 line="19" Type="Source" />
   </Doc0>
   <Doc1 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicalApp.h" >
-   <View0 line="56" Type="Source" />
+   <View0 line="102" Type="Source" />
   </Doc1>
   <Doc2 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicalApp.cpp" >
-   <View0 line="241" Type="Source" />
+   <View0 line="110" Type="Source" />
   </Doc2>
   <Doc3 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicBookZIP.cpp" >
-   <View0 line="45" Type="Source" />
+   <View0 line="33" Type="Source" />
   </Doc3>
   <Doc4 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicBookZIP.h" >
-   <View0 line="15" Type="Source" />
+   <View0 line="48" Type="Source" />
   </Doc4>
   <Doc5 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicalCanvas.cpp" >
-   <View0 line="95" Type="Source" />
+   <View0 line="445" Type="Source" />
   </Doc5>
   <Doc6 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicalCanvas.h" >
-   <View0 line="47" Type="Source" />
+   <View0 line="69" Type="Source" />
   </Doc6>
   <Doc7 NumberOfViews="1" URL="file:///home/jathey/dev/comical/unrar/dll.hpp" >
    <View0 line="30" Type="Source" />
@@ -30,7 +30,7 @@
    <View0 line="32" Type="Source" />
   </Doc8>
   <Doc9 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicBook.cpp" >
-   <View0 line="0" Type="Source" />
+   <View0 line="271" Type="Source" />
   </Doc9>
   <Doc10 NumberOfViews="1" URL="file:///home/jathey/dev/comical/TODO" >
    <View0 line="7" Type="Source" />
@@ -38,11 +38,14 @@
   <Doc11 NumberOfViews="1" URL="file:///home/jathey/dev/comical/ChangeLog" >
    <View0 line="22" Type="Source" />
   </Doc11>
+  <Doc12 NumberOfViews="1" URL="file:///home/jathey/dev/comical/src/ComicBook.h" >
+   <View0 line="72" Type="Source" />
+  </Doc12>
  </DocsAndViews>
  <pluginList>
   <kdevdebugger>
    <breakpointList>
-    <breakpoint0 location="/home/jathey/dev/comical/src/ComicalCanvas.cpp:508" type="1" condition="" enabled="1" />
+    <breakpoint0 location="/home/jathey/dev/comical/src/ComicalCanvas.cpp:526" type="1" condition="" enabled="1" />
    </breakpointList>
   </kdevdebugger>
   <kdevbookmarks>
