@@ -5,4 +5,3 @@ Long Term:
 User-configurable keybindings
 Page turning animation
 Box Zoom/Magnifying Glass
-Page Rotation
